Fix button SVG vertical align
SVG was not properly aligned with the button text.

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ header svg path {
 * * * * * * * * * * * * * */
 .add-btn {
     color: var(--text-color-dark);
-    font-weight: 500;
+    font-size: 1.1rem;
     margin-bottom: 48px;
     padding: .2em 1em;
     background: var(--add-btn-color);
@@ -158,7 +158,7 @@ header svg path {
 }
 
 .add-btn svg {
-    vertical-align: middle ;
+    vertical-align: text-bottom;
     width: 1.5rem;
     height: 1.5rem;
     margin-left: .5em;
